Add permissions/eval endpoint to allow external services to evaluate permissions
