# lib/models/permissions.js
@@ -198,6 +198,54 @@ async function find ({
     .toArray()
 }
 
+async function findUnpaginated ({
+  entityId,
+  thingIds,
+  scope,
+  properties,
+  actions,
+  events,
+  owner
+}) {
+  const db = await connect()
+  return db
+    .collection(collectionName)
+    .aggregate([
+      {
+        $match: cleanObject({
+          entityId,
+          owner,
+          ...(scope && {
+            scopes: {
+              $in: scope
+            }
+          }),
+          ...(thingIds && {
+            thingId: {
+              $in: thingIds
+            }
+          }),
+          ...(properties && {
+            $or: [{ properties }, { properties: '*' }]
+          }),
+          ...(actions && {
+            $or: [{ actions }, { actions: '*' }]
+          }),
+          ...(events && {
+            $or: [{ events }, { events: '*' }]
+          })
+        })
+      },
+      {
+        $project: {
+          _id: 0,
+          thingId: 1
+        }
+      }
+    ])
+    .toArray()
+}
+
 async function listReadableThings ({
   entityId,
   thingIds,
@@ -257,6 +305,7 @@ exports = module.exports = {
   hasInvokePermissions,
   find,
   findOne,
+  findUnpaginated,
   listReadableThings,
   isOwner
 }
